update styles to fix scrollbar issue on windows, updates to copy to clipboard to accommodate for mobile, changes to tabselector width on various screen sizes, change margin on table of contents

--- a/src/styles/scss/_home.scss
+++ b/src/styles/scss/_home.scss
@@ -122,6 +122,16 @@
   transition: 0.33s;
 }
 
+/* Hide scrollbar on windows */
+
+.nav-sidebar {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+}
+.nav-sidebar::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
+
 
 
 /* Diff view code highlighting  */
@@ -165,7 +175,9 @@ pre {
 .gatsby-highlight {
   border-radius: 10px;
   margin: 0.5em 0;
-  padding: 1em!important;
+  padding-top: 1em!important;
+  padding-bottom: 1em!important;
+  padding-right: 0.5em;
   overflow: auto;
   font-size:1em;
 }
